@@ -4,6 +4,11 @@
 
 	* pygtk-gdk-classes.xml Add pygtk-gdk-constants.xml to list.
 
+	* pygtk-pango-constants.xml Reorganize with a Synopsis and add
+	a description for each set of constants.
+
+	* pygtk-gobject-constants.xml Add.
+
 2004-04-25  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-pango-functions.xml Add.
